<resources>
    <string name="app_name">HUFSTOPIA</string>
    <string name="lake_explain">생명의 샘</string>
    <string name="egHall_explain"> 진눈개비 마을</string>
    <string name="ctHall_explain"> 서리눈사람 마을</string>
    <string name="lbHall_explain"> 솔론의 방</string>
    <string name="lgHall_explain"> 얼음심장 </string>
    <string name="foodhall_explain">배급소</string>
    <string name="cpsImage" translatable="false">campusImage</string>
    <string name="centtinalHall">centtinalHall</string>
    <string name="liberalHall">liberalHall</string>
    <string name="languageHall">languageHall</string>
    <string name="engineeringHall">engineeringHall</string>
    <string name="ans">정답</string>
    <string name="roksi">록시</string>
    <string name="kane">케인</string>
    <string name="kamelot">카멜롯</string>
    <string name="bigboy">풍코</string>
    <string name="hyungchan">장물아비</string>
    <string name="sollon">솔론</string>
    <string name="fungco">풍코</string>
    <string name="windy">윈디</string>
    <string name="tellia">텔리아</string>
    <string name="ikinas">이케나스</string>
    <string name="language_Setting">언어설정</string>
    <string name="korean">한국어</string>
    <string name="english">영어</string>
    <string name="back">뒤로가기</string>
    <string name="enterName">7자 이내의 이름을 입력하세요</string>
    <string name="start">시작하기</string>
    <string name="gameTitle">게임제목</string>
    <string name="homeImage" translatable="false">homeImage</string>
    <string name="skipButtonText">Skip</string>
    <string name="getinText">입장하기</string>
    <string name="rank">%s의 랭크</string>
    <string name="lakeButton" translatable="false">lakeButton\n</string>
    <string name="studenthallButton" translatable="false">studentHallButton\n</string>
    <string name="ct_location_black" translatable="false">ct_location_black</string>
    <string name="eg_location_black" translatable="false">eg_location_black</string>
    <string name="st_location_black" translatable="false">st_location_black</string>
    <string name="lb_location_black" translatable="false">lb_location_black</string>
    <string name="lake_location_black" translatable="false">lake_location_black</string>
    <string name="lb_location_red" translatable="false">lb_location_red</string>
    <string name="eg_location_red" translatable="false">eg_location_red</string>
    <string name="st_location_red" translatable="false">st_location_red</string>
    <string name="lake_location_red" translatable="false">lake_location_red</string>
    <string name="ct_location_red" translatable="false">ct_location_red</string>
    <string name="foodhall" translatable="false">foodhall</string>
    <string name="storyLine1">영하 40도의 혹한이 찾아와 전 세계가 얼어붙었다.\n모든 세계의 문명도 혹한에 의해 꽁꽁 얼어붙었고, 살아남은 나와 케인은 무리를 지었다.\n하지만 우리에게도 남은 물자가 거의 고갈되어 갔고, 살아남기 위해 무언가 해야만 했다.
    </string>
    <string name="storyLine2">아으 진짜, 추워 돌아가시겠네!\n이제 남은 석탄도 거의 다 떨어져가고 땔감도 거의 다 젖어서 쓸 수 있는게 없는데 어떡하지?</string>
    <string name="storyLine3">이렇게 굼뜨게 있다간 정말 길바닥에서 얼어죽고 말거야.\n일단 이 주변의 자원을 최대한 끌어모아보자.\n그리고 아직 여기에 생존자가 남아있을 지 몰라.</string>
    <string name="storyLine4">그래. 저기 마을이 보이니까 일단 저기에 베이스를 구축해두자.\n마을이니까 길거리보다는 훨씬 안정적이기도 할테고, 쓸만한 것 들도 남아있을 테니까.</string>
    <string name="storyLine5">서둘러야겠어, 저기 멀리 눈보라가 보여!\n일단 들어가고 보자. 달려!</string>
    <string name="storyLine6">나와 케인은 싸늘한 분위기를 풍기는 마을을 향해 달려갔다.\n</string>
    <string name="storyLine7">저 멀리 다가오는 눈보라에 어서 대비해두자.\n마을 안에 있더라도 저 눈보라가 지나가려면 꽤 오래 걸릴테니까.\n우린 무슨 일이 있더라도 살아남을거야.</string>
    <string name="ct_storyLine1_1">나와 케인은 함께 서리 눈사람 마을에 도착했다. \n쓰러져가는집들과 많은 동사체들의 모습을 보고 아직 살아있음을 다시 느꼈다.\n나와 케인은 한 집에 들어가 수색을 시작했다.</string>
    <string name="ct_storyLine1_2">보자... 쓸만한 게 있을텐데... \n(케인과 집 내부를 자세히 뒤진다)</string>
    <string name="ct_storyLine1_3">당신들 누구야! 어디서 어떻게 굴러들어온거야!\n둘 뿐이야? 뭐가 목적이지?</string>
    <string name="ct_storyLine1_4">(생존자인 모양이다...)\n아니야! 우리는 수상한 사람이 아니야. 멀리서 마을같은 게 있어서 온 것 뿐이야.\n저 멀리서 눈보라가 오고 있어. 그걸 대비해야해!</string>
    <string name="ct_storyLine1_5">눈보라...! 그건 꽤 큰일이야. 아까 얼핏 봤는데 지나가려면 30분은 족히 넘겠던걸.\n일단 너희도 어찌저찌 살아남은 모양이니 여기서 눈보라를 피해.\n난 록시라고 불러. 뭔가 땔감같은 건 가지고 왔겠지?</string>
    <string name="ct_storyLine1_6">우리 땔감도 막 다 떨어진 참이야. 여기에 쓸만한 건 없어?</string>
    <string name="ct_storyLine1_7_">바닥에 숨겨진 문이 있었어. 거기에 뭔가 쓸만한 게 있을 지도 몰라.\n그런데 숫자를 입력하는 자물쇠가 있어. 이걸 열어야 할 것 같아.</string>
    <string name="ct_storyLine1_8">열렸어! 이 안에 석탄 상자가 있어. 어서 이걸 가지고 올라가!\n그리고 문단속 서둘러! 바람이 조금이라도 들어오면 집이 내려앉고 말거야.</string>
    <string name="ct_storyLine1_9">알겠어. 케인, 거기 창문에 판자 좀 더 덧대봐!\n눈보라 곧 시작될거야!</string>
    <string name="ct_storyLine1_10">(눈보라가 휘몰아친다. 집이 떠나갈 기세로 흔들리지만 잘 대비한 덕에 추위도 견뎌냈고, 어찌저찌 잘 넘겨낸 듯 하다.)</string>
    <string name="ct_storyLine1_11_">살았어... 일단 제일 큰 고비는 넘겼네.</string>
    <string name="ct_storyLine2_1">눈보라가 지나가고 마을 광장에 갔다. 거기에는 살아남은 생존자가 꽤 있었다.\n지도자로 보이는 사람이 보였고, 그에게 말을 걸어봤다.</string>
    <string name="ct_storyLine2_2">안녕하십니까 선생님, 이곳 마을에 생존자가 꽤 많네요. 저희도 여기서 뭔가 도움을 드릴 일이 없을까요?\n여기서 생활하며 함께 생존하는 게 어떻겠습니까?</string>
    <string name="ct_storyLine2_3_">좋습니다. 저희는 사람이 많을수록 원정이 원활해질테니까요.\n내 이름은 카멜롯입니다. 앞으로 잘 부탁하지요.\n여기 이 쪽지를 가지고 그 집에서 생활하면 될 겁니다.</string>
    <string name="ct_storyLine2_4">여기가 우리가 배정받은 집인 모양이야. 동거인이 있는 모양이군.</string>
    <string name="ct_storyLine2_5">안녕, 내 이름은 빅보이라고 해.    같이 잘 살아남아보자고.</string>
    <string name="ct_storyLine2_6_">우리는 %s, 케인이야. 잘 부탁해.</string>
    <string name="ct_storyLine3_1">자, 주변 환경을 탐색하며 쓸만한 자원을 수집해옵시다.\n각 조마다 이 통들을 드릴테니 쓸모가 있어 보이는 물건은 죄다 담아서 와주시기 바랍니다.</string>
    <string name="ct_storyLine3_2">(모든 조가 5통을 꽉 채워 돌아왔다.)\n이걸 어떻게 쌓아둘까? 꽤 많이 모은 것 같네.\n이 라디오는 큰 수확일지도 몰라.</string>
    <string name="ct_storyLine3_3">모든 조가 통들을 배치해두고, 카멜롯은 각 조가 수확해온 노획물을 확인했다.</string>
    <string name="ct_storyLine3_4_">남들보다 노획물이 적은 것은 부끄러운 게 아닙니다.\n하지만 이렇게 남들보다 있어보이기 위해 부풀리면, 그건 신뢰에 문제가 생깁니다.</string>
    <string name="ct_storyLine3_5">남들보다 더 많이 배급받기 위해 간혹 저렇게 속이는 경우가 있다고 한다.\n할당량을 속인 이들은 징벌방으로 끌려간다.</string>
    <string name="ct_storyLine3_6">절박하게 살아남아 겨우 이룬 사회에서 신뢰는 정말 중요하구나.\n우리도 여기에 있는 동안은 신뢰를 중요하게 생각해야겠어.</string>
    <string name="ct_storyLine3_7_">뭔가 저질러놓고 나한테 덮어씌우지나 말라고! ㅋㅋㅋ</string>
    <string name="eg_storyLine1_1">오늘은 새로운 곳으로 원정을 떠났다. 마을에서 좀 떨어져있는데, 규모가 큰 건물이 있는 곳이다.\n나와 케인, 록시가 한 조를 이루어 건물에 들어섰다.</string>
    <string name="eg_storyLine1_2">저렇게 곡선으로 이루어진 유리창을 보면 그리운 생각이 들어. 되게 옛날 생각이 많이 난달까?</string>
    <string name="eg_storyLine1_3">오오, 그런 생각도 하는구나? 나도 가끔은 별 일 없는 평범한 일상이 그리울 때가 있더라.</string>
    <string name="eg_storyLine1_4_">되게 신기한 디자인이네.근데 색깔이 안 입혀져 있으니까 되게 밋밋하다.이거 이렇게 색칠하면 어떻게 될까?</string>
    <string name="eg_storyLine1_5">저런 놓치기 쉬운 허점도 있었네! %s 너 되게 눈썰미 좋다!</string>
    <string name="eg_storyLine1_6">아냐, 그냥 어쩌다 보니 때려맞춘거지! ㅋㅋㅋㅋ</string>
    <string name="eg_storyLine1_7_">(...둘이 묘하게 사이 좋지 않아?)</string>
    <string name="eg_storyLine2_1">어느덧 조난 생활도 한 달이 되어간다. 규칙에 따라 숙소를 다른 숙소로 옮긴다.\n배정받은 새 방으로 짐을 옮기던 중 일어난 일이다.</string>
    <string name="eg_storyLine2_2">야 케인! 이게 다 뭐야!</string>
    <string name="eg_storyLine2_3">아뿔싸, 케인이 자기 짐을 전부 널브려 놓은 것이다! 땅바닥에 짐을 담아둔 박스 여럿이 놓여있다.\n마침 우리 숙소에 들른 록시는 상황을 이해하지 못한 듯 하다.</string>
    <string name="eg_storyLine2_4">아 %s! 나 한번만 도와주라! 내 지갑 찾는 거 한 번만 도와줘!</string>
    <string name="eg_storyLine2_5">그 안에 뭐가 있길래 이렇게 다 뿌려놓은거야! 뭐 보석이라도 주워둔거냐?</string>
    <string name="eg_storyLine2_6">아니야! 이 중에 지갑이 들어있는 상자가 있을거거든?\n그 안에 우리 가족의 증명사진이 들어있어!\n도와주면 나중에 내 저녁 너한테 줄게!</string>
    <string name="eg_storyLine2_7_">어휴 진짜... 도와줄테니까 빨리 상자 다 까봐!</string>
    <string name="eg_storyLine2_8">찾았다! 이 박스에 있었네!</string>
    <string name="eg_storyLine2_9">찾아서 정말 다행이야... 이게 없으면 난 살 이유가 없어. 도와줘서 정말 고맙다, %s!</string>
    <string name="eg_storyLine2_10">근데 이 터놓은 상자들은 언제 다 옯길거야?</string>
    <string name="eg_storyLine2_11">왜? 아직은 해가 떠있잖아?</string>
    <string name="eg_storyLine2_12">...지금 밖에 한번 봐볼래?</string>
    <string name="eg_storyLine2_13">어라? 아직 8시쯤일텐데...</string>
    <string name="eg_storyLine2_14">오후 8시는 낮이야, 밤이야?</string>
    <string name="eg_storyLine2_15">밤...이지...?</string>
    <string name="eg_storyLine2_16_">널 어쩌면 좋냐...</string>
    <string name="eg_storyLine3_1">케인의 소중한 물건을 찾고 서로 도와서 짐을 옮겼다. 그런데 처음 보는 자물쇠가 우리 숙소 문짝에 걸려있었다!</string>
    <string name="eg_storyLine3_2">뭐야? 난 이런 자물쇠 채운 적 없는데?</string>
    <string name="eg_storyLine3_3">옆에서 되게 순박한 시선으로 콧물 흘리며 쳐다보는 애가 한 명 있었다.</string>
    <string name="eg_storyLine3_4">그거 내가 걸어버렸어! 신기한 걸 주웠는데 가지고 놀다가 거기에 잠겨버렸어!\n그거 풀어주라!</string>
    <string name="eg_storyLine3_5">넌 누군데? 자물쇠가 뭔지 모르고 그런거야?\n이거 암호는 알아?</string>
    <string name="eg_storyLine3_6">난 퐁코! 그거 만질 줄 몰라!\n그거 풀어줘, 더 가지고 놀래!</string>
    <string name="eg_storyLine3_7">이 그림은 또 뭐야? 이 자물쇠에 붙어있었다고?</string>
    <string name="eg_storyLine3_8">어머, 얘는 누구지? 아는 아이야?</string>
    <string name="eg_storyLine3_9">그냥 뭐 어린애인것 같아.\n신경쓸 것 없겠지.</string>
    <string name="eg_storyLine3_10_">아무튼 자물쇠부터 빨리 풀어보자.</string>
    <string name="eg_storyLine3_11">풀었다! 뭐 별거 아니네. 자, 이거 가져가.</string>
    <string name="eg_storyLine3_12">저 애 원래 이 마을에 있던 애인가?</string>
    <string name="eg_storyLine3_13">글쎄? 나도 한 달간 살면서 본 적 없는 애인데?</string>
    <string name="eg_storyLine3_14_">결국 그 애는 누구였던걸까. 갑자기 등골이 싸늘해진다.</string>
    <string name="eg_storyLine4_1">건물 앞에 집합해 인원과 수확물을 점검한다.\n생각보다 수확이 많아서 축제같은 분위기다.</string>
    <string name="eg_storyLine4_2">좋아! 오늘은 수확이 꽤 크군.\n이런 날에는 뭔가 재미난 걸 해도 좋겠지!</string>
    <string name="eg_storyLine4_3_">오오, 카멜롯이 뭔가 재밌는 일을 꾸미고 있는 것 같다.</string>
    <string name="eg_storyLine4_4_">뭔가를 받아서 기분은 좋지만... 이거 굳이 필요한건가?\n꽁꽁 얼어서 마시지도 못하는 걸...</string>
    <string name="food_storyLine1_1">음식을 배급받기 위해 배급소에 가는 길이었다.\n 수송차량에서 빅보이가 내리는 게 보였다.</string>
    <string name="food_storyLine1_2">방금 지나간 녀석 빅보이 아니야?</string>
    <string name="food_storyLine1_3">맞을걸? 벌써 다녀왔나보네.</string>
    <string name="food_storyLine1_4">방금 되게 배밌는게 떠올랐어.</string>
    <string name="food_storyLine1_5">엥? 뭐?</string>
    <string name="food_storyLine1_6_">이 버스, 원래 몇 명이나 타고 있었을까? 궁금하지 않아?</string>
    <string name="food_storyLine1_7">그렇게 교묘하게 문제를 내다니.. 이 녀석 완전 괴짜잖아!</string>
    <string name="food_storyLine1_8">그런 걸로 일일이 괴짜라고 하는 너도 괴짜같아 인마 ㅋㅋㅋㅋㅋ</string>
    <string name="food_storyLine1_9_">어지럽구만 그냥..</string>
    <string name="food_storyLine2_1">오늘은 특식을 나눠주는 모양이다.\n나와 케인, 록시와 함께 가서 배급받으려고 줄을 섰다.</string>
    <string name="food_storyLine2_2_">녀석들! 특식이라고 달려온 모양이구나! 역시 젊은 애들이니 많이 먹어야겠지!\n이 수수께끼를 풀면 너네한테만 특별히 우유랑 설탕 몇 조각을 같이 줄게!</string>
    <string name="food_storyLine2_3">팬케이크는 정말 맛있었다.\n케인은 접시에 코를 박고 팬케이크를 마시다시피 먹었다.\n진짜 내가 다 부끄럽다.</string>
    <string name="food_storyLine2_4">(우물대며)먹을 것 가지고 장난 치는 거 아니라고 그랬는데, 보상이 있다면 얘기가 달라지지!</string>
    <string name="food_storyLine2_5">보상 앞에서는 눈이 돌아가 버리는구나 너...</string>
    <string name="food_storyLine2_6">아! 저 팬케이크 어떻게 다시 가보면 또 주지 않을까?\n우리 얼굴 까먹었으면 또 줄 지도 모르잖아!</string>
    <string name="food_storyLine2_7_">난 거기서 빼주라...</string>
    <string name="food_storyLine3_1">록시와 케인과 함께 배식을 받고 일과까지 시간이 좀 남아서 숙소에 갔다.</string>
    <string name="food_storyLine3_2">짠! 체인 목걸이 만들려고 재료 좀 모아봤어!</string>
    <string name="food_storyLine3_3">오, 되게 잘 어울리겠는데?</string>
    <string name="food_storyLine3_4">그거 빅보이한테 가면 체인 연결해 준다더라! 손재주가 좋은 모양이야.</string>
    <string name="food_storyLine3_5_">그래? 가서 그럼 바로 만들어달라고 부탁해보자!</string>
    <string name="food_storyLine3_6">어때? 잘 만들어진 것 같아?</string>
    <string name="food_storyLine3_7">응! 예상대로 잘 어울리네!</string>
    <string name="food_storyLine3_8_">생각도 못한 방법으로 연결해서 놀랐어! 어떻게 빵 하나를 아낀건지 아직도 모르겠어.</string>
    <string name="lake_storyLine1_1">어느 날 일과가 모두 끝나고 주민들이 모여 캠프파이어를 하기로 했다.</string>
    <string name="lake_storyLine1_2">여러분, 우리 보드게임을 합시다! 내가 저기 건물에서 주워왔어!</string>
    <string name="lake_storyLine1_3">보드게임 좋네! 그거 아발론 아니야?\n나 그거 옛날에 엄청 잘했거든!</string>
    <string name="lake_storyLine1_4">앗, 알고 있었던 게임이면 불공평해져서 안되는데.</string>
    <string name="lake_storyLine1_5_">그럼 규칙을 좀 바꿔서 해보자!</string>
    <string name="lake_storyLine1_6">아니이----!! 그래서 누가 퍼시벌인건데!!!</string>
    <string name="lake_storyLine1_7">야 케인, 진정 좀 해봐 게임이잖아 ㅋㅋㅋㅋㅋㅋㅋ</string>
    <string name="lake_storyLine1_8">쟤 진지하게 게임하는 거 되게 웃기다...ㅋㅋㅋㅋㅋ</string>
    <string name="go_home">처음으로</string>
    <string name="see_detail">자세히</string>
    <string name="show_rank">랭크</string>
</resources>